Fixed read link content been seen on mobile safari. Just moved it a bit more outside.

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -23,7 +23,7 @@
         left: 0px;
         right: 0px;
         bottom: 0px;
-        text-indent: 100%;
+        text-indent: 200%;
         white-space: nowrap;
         text-align: right;
       }
